--- a/force-app/main/default/classes/TriggerBypass.cls
+++ b/force-app/main/default/classes/TriggerBypass.cls
@@ -15,4 +15,5 @@
 public with sharing class TriggerBypass {
   public static Boolean bypassStripeSubscription = false;
   public static Boolean bypassStripeCustomer = false;
+  public static Boolean bypassHMACVerification = false;
 }
